<resources>
    <string name="app_name">BroilerFirmAutomation</string>
    <string name="email_address">Email Address</string>
    <string name="password">Password</string>
    <string name="login">login</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="light">Light</string>
    <string name="off">off</string>
    <string name="my_devices">My Devices</string>
    <string name="celsius_symbol">°C</string>
    <string name="zero">0</string>
    <!-- Preference Titles -->
    <string name="messages_header">Messages</string>
    <string name="sync_header">Sync</string>

    <!-- Messages Preferences -->
    <string name="signature_title">Your signature</string>
    <string name="reply_title">Default reply action</string>

    <!-- Sync Preferences -->
    <string name="sync_title">Sync email periodically</string>
    <string name="attachment_title">Download incoming attachments</string>
    <string name="attachment_summary_on">Automatically download attachments for incoming emails
    </string>
    <string name="attachment_summary_off">Only download attachments when manually requested</string>
    <string name="status_change_time_hint">Status Change Time</string>
    <string name="add_new">Add New</string>
    <string name="default_notification_channel_id">channel_id</string>
    <string name="enable_or_disable_status_icon">Enable or Disable Status Icon</string>
    <string name="onclick_edit_the_device_details">onclick edit the device details</string>
    <string name="device_icon">device icon</string>
</resources>