<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/card"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginStart="6dp"
    android:layout_marginTop="6dp"
    android:layout_marginEnd="6dp"
    android:clickable="true"
    android:focusable="true"
    android:foreground="?selectableItemBackground"
    app:cardCornerRadius="6dp"
    app:cardElevation="6dp">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="vertical"
        android:padding="10dp">

        <ImageView
            android:id="@+id/device_icon"
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:layout_marginTop="4dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:src="@drawable/ic_bulb_outline"
            android:contentDescription="@string/device_icon" />

        <TextView
            android:id="@+id/device_name"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="16dp"
            android:textSize="20sp"
            app:layout_constraintEnd_toStartOf="@+id/imageView"
            app:layout_constraintStart_toEndOf="@+id/device_icon"
            app:layout_constraintTop_toTopOf="parent"
            tools:text="@string/light" />

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/enable_or_disable_status_icon"
            android:src="@drawable/ic_baseline_check_circle_outline_24"
            android:visibility="invisible"
            app:layout_constraintBottom_toBottomOf="@+id/device_name"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@+id/device_name" />

        <TextView
            android:id="@+id/device_status"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAllCaps="true"
            app:layout_constraintStart_toStartOf="@+id/device_name"
            app:layout_constraintTop_toBottomOf="@+id/device_name"
            tools:text="@string/off" />

        <TextView
            android:id="@+id/hint1"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:textAllCaps="false"
            android:textSize="12sp"
            app:layout_constraintEnd_toStartOf="@+id/imageButton"
            app:layout_constraintStart_toStartOf="@+id/device_status"
            app:layout_constraintTop_toBottomOf="@+id/device_status"
            android:text="@string/status_change_time_hint" />

        <TextView
            android:id="@+id/on_off_time"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:drawableStart="@drawable/ic_baseline_access_time_filled_24"
            android:drawablePadding="5dp"
            android:gravity="center_vertical"
            android:textAllCaps="false"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/imageButton"
            app:layout_constraintStart_toStartOf="@+id/hint1"
            app:layout_constraintTop_toBottomOf="@+id/hint1"
            tools:text="@string/status_change_time_hint" />

        <ImageButton
            android:id="@+id/imageButton"
            android:visibility="invisible"
            style="@style/Widget.AppCompat.ActionButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/onclick_edit_the_device_details"
            android:src="@drawable/ic_settings_2_outline"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent" />
    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.cardview.widget.CardView>